# telegram_gpt_chatbot

./: .env.example  .gitignore  README.md  config.env.example  main.py  pyproject.toml  requirements.txt  run.sh  update.sh
bot/: __init__.py  config.py  logging_setup.py  service_locator.py  telegram_app.py
bot/db/: __init__.py  models.py  repositories.py  session.py
bot/handlers/: chat_commands.py  errors.py  media_messages.py  start.py  stickers.py  text_messages.py
bot/services/: auth_service.py  chat_service.py  formatting_service.py  openai_service.py  telegram_file_service.py  telegram_rich_text_service.py  title_service.py  token_usage.py
bot/utils/: __init__.py  ids.py  time.py  validators.py
tests/: test_auth.py  test_chat_service.py  test_errors.py  test_handlers.py  test_logging_setup.py  test_openai_service.py  test_telegram_rich_text_service.py  test_title_service.py
